# ozgursozluk

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt  serve.py  test.py  tests.py
.github/: FUNDING.yml
.github/workflows/: deploy-image.yml  deploy.yml  publish-to-pypi.yml  publish.yml  test.yml  tests.yml
ozgursozluk/: __init__.py  api.py  config.py  configs.py  models.py  scraper.py  utils.py  views.py
ozgursozluk/static/: amoled.css  dark.css  discord.css  gruvbox.css  gruvboxlight.css  light.css  startpage.css  style.css  violet.css
ozgursozluk/templates/: 404.html  author.html  base.html  debe.html  donate.html  entry.html  entry_macro.html  index.html  macros.html  navigation.html  paginate.html  search.html  settings.html  topic.html
src/ozgursozluk/: __init__.py  configs.py  handlers.py  main.py  views.py
src/ozgursozluk/routes/: content.py  core.py  utility.py
src/ozgursozluk/static/: black_metal.css  fontello.css  manifest.json  robots.txt  style.css  violet.css  yotsuba-b.css
src/ozgursozluk/static/font/: fontello.eot
src/ozgursozluk/static/theme/: discord.css  goth-girl.css  iceberg-dark.css  solarized-dark.css
src/ozgursozluk/templates/: about.html  author-badges.html  author.html  base.html  channels.html  debe.html  debe.xml  entry.html  gundem.xml  index.html  macros.html  not-found.html  paginate.html  privacy-policy.html  rss.xml  search.html  settings.html  sitemap.xml  terms-of-service.html  topic.html  topic.xml
