[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ozgursozluk"
authors = [
    {name = "beucismis", email = "beucismis@tutamail.com"},
]
description = "A free and open source alternative ekşi sözlük front-end"
requires-python = ">=3.8"
keywords = [
    "alternative", "flask", "front-end", "eksisozluk", "self-hosted",
    "beautifulsoup", "eksi", "sozluk", "debe", "gundem", "sukela",
]
license = {file = "LICENSE"}
classifiers = [
    "Topic :: Internet",
    "Framework :: Flask",
    "Programming Language :: Python",
]
dynamic = ["version", "dependencies"]

[tool.poetry]
readme = "README.md"
include = [
    "ozgursozluk/static/*", "ozgursozluk/templates/*",
]

[tool.setuptools.dynamic]
version = {attr = "ozgursozluk.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/beucismis/ozgursozluk"
Repository = "https://github.com/beucismis/ozgursozluk"
Changelog = "https://github.com/beucismis/ozgursozluk/releases"
Documentation = "https://github.com/beucismis/ozgursozluk/blob/main/README.md"
